--- a/user_guide/02-Raspberry Pi set up and software installation.mdx
+++ b/user_guide/02-Raspberry Pi set up and software installation.mdx
@@ -1,8 +1,7 @@
 import TOCInline from '@theme/TOCInline';
 
 
-Let's install your new Pioreactor
-==================================
+## Let's install your new Pioreactor
 
 You can expect the setup process to take 10-15 minutes.
 
@@ -18,8 +17,8 @@ Before you get started, you'll need to have the following:
 
 :::
 
-Setting up your Raspberry Pi
-----------------------------
+### Setting up your Raspberry Pi
+
 
 We'll start with an unused Raspberry Pi and empty microSD card (or we'll reformat the card later if not empty).
 
@@ -49,7 +48,7 @@ We'll start with an unused Raspberry Pi and empty microSD card (or we'll reforma
 
 
 
-### Adding workers to your cluster
+## Adding workers to your cluster
 
 #### From the web UI
 
@@ -69,23 +68,23 @@ After a few minutes, the new Pioreactor should appear on the _Pioreactors_ and _
 
 On the leader's command line, the command `pio add-pioreactor <new name>` will connect the new Pioreactor to the cluster.
 
-Troubleshooting
-===============
+## Troubleshooting
 
-### My Rpi won't connect to my Wifi.
+
+#### My Rpi won't connect to my Wifi.
 
 *   Some Raspberry Pis can't connect to Wifi natively, and some Raspberry Pis can only connect to 2.4GHz connections. See table below: [![Rpi and wifi](https://user-images.githubusercontent.com/884032/105118696-e945dd00-5a9c-11eb-91f5-0cc77cdc1422.png)](https://user-images.githubusercontent.com/884032/105118696-e945dd00-5a9c-11eb-91f5-0cc77cdc1422.png)[](https://user-images.githubusercontent.com/884032/105118696-e945dd00-5a9c-11eb-91f5-0cc77cdc1422.png)
 *   If connecting to a 5GHz wifi connection, you _need_ to supply a valid country code. See the list here: [https://en.wikipedia.org/wiki/ISO\_3166-1\_alpha-2/](https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2 "Link to country codes on wikipedia")
 *   Check out some other possibilities [here](https://community.octoprint.org/t/wifi-setup-and-troubleshooting/184#heading--troubleshooting).
 
 
-### I want to change the Pioreactor name on installation of leader
+#### I want to change the Pioreactor name on installation of leader
 
 Easiest solution is to start over: reflashing the OS onto the microSD card will remove all previous data, and you can try again.
 
-### pioreactor.local in a web browser is not showing up
+#### pioreactor.local in a web browser is not showing up
 
-*   The UI is hosted on **http**, not **http_s_**. Check if you are accessing `**http**://pioreactor.local`, and _not_ `**https**://pioreactor.local`.
+*   The UI is hosted on **http**, not **http_s_**. Check if you are accessing `http` `://pioreactor.local`, and _not_ `https` `://pioreactor.local`.
 *   Are you on an older Windows machine? You may need to install a DNS [service](https://learn.adafruit.com/bonjour-zeroconf-networking-for-windows-and-linux/overview#microsoft-windows-914263-8), but also see workarounds [here](https://github.com/OutsourcedGuru/octoprint-name-resolution-hacks).
 *   Try instead `http://<the permanent name of your Pioreactor aka hostname>.local`
 *   Still not working? Try instead `http://<IP address of your Raspberry Pi>`
