--- a/user_guide/11-Common questions.mdx
+++ b/user_guide/11-Common questions.mdx
@@ -35,7 +35,7 @@ We've designed the hardware and software to be compatible with any Raspberry Pi 
 
 Although you can use any above, we like the Raspberry Pi 3 Model A+ because of its low power consumption, slim build, and low price. It has the necessary CPU power and memory for the Pioreactor workload, and is generally the cheapest on the list above (see note on Zero W below).
 
-**\*** _Raspberry Pi Zero W_ is on the list above, and is very low cost compared to the others. They can absolutely be used for Pioreactors _as workers_ - we don't recommend them to be your _leader_ (note sure what these terms mean? Here's an introduction to [leader and workers](/Leaders-workers-and-inventory)). As workers, Raspberry Pi Zero W perform just fine, but will respond slower to commands. Note that this does not include the Raspberry Pi Zero _2_ W model, which is fine for all jobs.
+**\*** _Raspberry Pi Zero W_ is on the list above, and is very low cost compared to the others. They can absolutely be used for Pioreactors _as workers_ - we don't recommend them to be your _leader_ (note sure what these terms mean? Here's an introduction to [leader and workers](/user_guide/Creating%20a%20Pioreactor%20cluster)). As workers, Raspberry Pi Zero W perform just fine, but will respond slower to commands. Note that this does not include the Raspberry Pi Zero _2_ W model, which is fine for all jobs.
 
 ### Do I need any cooling for the Raspberry Pi?
 
@@ -67,4 +67,4 @@ More granular logs per Pioreactor are available in `/var/log/pioreactor.log` on 
 
 ### My microSD card is corrupted - what can I do?
 
-Unfortunately, the microSD card becoming corrupted or damaged is an infrequent but possible risk with using Raspberry Pis. - If the microSD card was inside a non-leader, it's best to try to reformat the microSD card and start fresh (i.e. [reinstall the Pioreactor software and reintroduce it to the cluster](/Installation#adding-workers-to-your-cluster)). This is usually okay as no critical data is stored locally in workers, except for some log files. - If the microSD was inside the leader Raspberry Pi, this is a bigger problem. Likely any running experiment will have to be restarted. Fortunately, if you have more than one Pioreactor other than the leader, then the leader's SQLite database has been periodically backing itself up to other Pioreactors every few days. Using the command line, check other Pioreactors' `/home/pi/.pioreactor/storage` directory for the _latest_ backup named `pioreactor.sqlite.backup` (should be from within the past few days hours). You can use this database to restart a new leader.
+Unfortunately, the microSD card becoming corrupted or damaged is an infrequent but possible risk with using Raspberry Pis. - If the microSD card was inside a non-leader, it's best to try to reformat the microSD card and start fresh (i.e. [reinstall the Pioreactor software and reintroduce it to the cluster](/user_guide/Raspberry%20Pi%20set%20up%20and%20software%20installation#adding-workers-to-your-cluster)). This is usually okay as no critical data is stored locally in workers, except for some log files. - If the microSD was inside the leader Raspberry Pi, this is a bigger problem. Likely any running experiment will have to be restarted. Fortunately, if you have more than one Pioreactor other than the leader, then the leader's SQLite database has been periodically backing itself up to other Pioreactors every few days. Using the command line, check other Pioreactors' `/home/pi/.pioreactor/storage` directory for the _latest_ backup named `pioreactor.sqlite.backup` (should be from within the past few days hours). You can use this database to restart a new leader.
