--- a/user_guide/02-Raspberry Pi set up and software installation.mdx
+++ b/user_guide/02-Raspberry Pi set up and software installation.mdx
@@ -10,7 +10,7 @@ You can expect the setup process to take 10-15 minutes.
 
 Before you get started, you'll need to have the following:
 
-1.  A Raspberry Pi (our list of preferred Raspberry Pis is [here](https://pioreactor.com/pages/faqs-and-how-do-is#what-raspberrypi-hardware-can-i-use-i-see-raspberrypi-1-2-3-a-b--zero---its-confusing))
+1.  A Raspberry Pi (our list of preferred Raspberry Pis is [here](/user_guide/Common%20questions#what-raspberry-pi-hardware-can-i-use-i-see-raspberry-pi-1-2-3-4-a-b--zero---its-confusing))
 2.  A blank microSD card, ideally 16GB size or larger.
 3.  A suitable power cord for the Raspberry Pi. (If you look at the power rating, it should be about 5V and at least 2A).
 4.  A computer with internet access and ability to read & write to a microSD card.
@@ -44,7 +44,7 @@ We'll start with an unused Raspberry Pi and empty microSD card (or we'll reforma
 5.  Attach your Pioreactor HAT to your Raspberry Pi.
 6.  Ensure the two pieces fit snugly together.
 7.  Plug the power cord into your Raspberry Pi in. LEDs onboard the Raspberry Pi should start to light up.
-8. After a few moments, your Pioreactor will flash a blue LED and now is ready to go. Navigate to [http://pioreactor.local](http://pioreactor.local) in a web browser to visit the web interface. (Not working? See [Troubleshooting](#Troubleshooting) below).
+8. After a few moments, your Pioreactor will flash a blue LED and now is ready to go. Navigate to [http://pioreactor.local](http://pioreactor.local) in a web browser to visit the web interface. (Not working? See [Troubleshooting](/user_guide/Raspberry%20Pi%20set%20up%20and%20software%20installation#troubleshooting) below).
 
 
 
