--- a/user_guide/02-Raspberry Pi set up and software installation.mdx
+++ b/user_guide/02-Raspberry Pi set up and software installation.mdx
@@ -1,7 +1,7 @@
 import TOCInline from '@theme/TOCInline';
 
 
-## Let's install your new Pioreactor
+### Let's install your new Pioreactor
 
 You can expect the setup process to take 10-15 minutes.
 
@@ -32,7 +32,7 @@ We'll start with an unused Raspberry Pi and empty microSD card (or we'll reforma
 4. Click the settings menu (Gear button in the bottom left).
   ![Settings menu](/img/user_guide/ctrlshiftx.png)
 
-    1. Set hostname as the desired name of this Pioreactor. Some names that we use for our first Pioreactor: ` pioreactor1`, or `leader`, or `p1`.
+    1. Set hostname as the desired name of this Pioreactor. Some names that we use for our first Pioreactor: `pioreactor1`, or `leader`, or `p1`.
     2. Check "Enable SSH".
     3. (Optional) Add a password, default is `raspberry` if not provided.
     3. Check "Configure wifi" and enter your network name into SSID, wifi password, and country.
