--- a/user_guide/20-Common questions.mdx
+++ b/user_guide/20-Common questions.mdx
@@ -32,6 +32,13 @@ For some experiments, especially when using a scatter angle of 135°, you may no
 The scatter angle is the angle between the IR LED and a photodiode. This angle can be 45°, 90°, or 135°  (although 180° is possible, we don't consider it here). What is there to consider when choosing an angle. In general, the trend is shorter angles => less sensitive at low densities, but higher saturation point. By default, we suggest 45° as a good trade off between sensitivity and saturation. You can mix angles, and the Pioreactor's internal algorithm will still combine them into a single growth rate. Read more about Pioreactor's optical system [here](https://pioreactor.com/blogs/pioreactor-blog/estimating-growth-rates-with-kalman-filters).
 
 
+#### Can I use my own LEDs and photodiodes for optical density?
+
+Of course! The only two requirements are that the spectrum of the LED overlaps with the spectrum of the photodiode, and that the LED light won't be absorbed by media/culture, nor damage the media/culture. Thus, the often-used 600nm light source works in the Pioreactor. None of our internal algorithms or analytics are dependent on the wavelength of light chosen.
+
+When you are using additional LEDs outside of the optical density LED & photodiode pair, you may worry that your additional LEDs will interfere with the optical density measurement. This won't happen, as we turn off all non-optical density LEDs before taking an optical density measurement.
+
+
 Heating and Temperature control
 ---------------------------------
 
@@ -52,6 +59,23 @@ The Pioreactor has an onboard PCB, called the heating PCB, that sits below the g
 :::note
 If using an external power supply that's more than 5V, this will create more heat than the Pioreactor is tuned for. You may want to tune the PID controls in `[temperature_automation.stable]` section in the config.ini
 :::
+
+Mixing and stirring in the Pioreactor
+---------------------------------------
+
+#### How is mixing / stirring performed in the Pioreactor?
+
+Stirring is performed with a 15mm stir bar inside the vial, controlled by a pair of magnets spinning below the vial. The rotation speed, RPM, of the vial can be controlled using the Pioreactor software. This stirring is also how aeration is done.
+
+#### How can I improve mixing and aeration?
+
+If the standard mixing and aeration with the stir bar is not enough for your application, you can do a few things, in increasing order of complication:
+
+1. Increase the RPM of the stirring. This will increase the surface area exposed to the air. Be warned though: too high of an RPM will cause either a large enough vortex to interfere with the optical systems, or will causing the stir bar to fall out of sync.
+2. Add a baffle to the vial cap. A simple cylinder that sticks into the liquid causes enough disturbance in the rotating liquid that both mixing and aeration are significantly improved. A tube can be removed from the cap, and a autoclavable rod can be inserted such that it enters the media, but won't interfere with the optics.
+3. Adding external aeration to your Pioreactor. In the simplest case, using an air pump.
+
+
 
 
 Raspberry Pi Hardware
