update docs with new name change

--- a/user_guide/20-Common questions.mdx
+++ b/user_guide/20-Common questions.mdx
@@ -44,7 +44,7 @@ Heating and Temperature control
 
 #### Why does the Pioreactor only provide a temperature reading every 4 minutes?
 
-We made a design choice early on to make set up as error-free as possible. This involved thinking about being sensors from being _in situ_ (in place), the moving sensors to the outside of the vial. The temperature sensor in the Pioreactor is outside the vial, which means less chance of contamination, but there's a tradeoff (as you could guess): we have to rely on an estimation algorithm that requires 4 minutes to gather data on. We think this is a fair trade-off, as high frequency temperature readings are not that important in an experiment that lasts 12 hours+.
+We made a design choice early on to make preparation as error-free as possible. This involved thinking about sensors being _in situ_ (in place), versus the sensors being on the outside of the vial. The temperature sensor in the Pioreactor is outside the vial, which means less chance of contamination, but there's a tradeoff (as you could guess): we have to rely on an estimation algorithm that requires 4 minutes to gather data on. We think this is a fair trade-off, as high frequency temperature readings are not that important in an experiment that lasts 12 hours or more.
 
 #### Why does the Pioreactor's heating keep shutting off?
 
