--- a/user_guide/01-Getting started/02-Raspberry Pi set up and software installation.mdx
+++ b/user_guide/01-Getting started/02-Raspberry Pi set up and software installation.mdx
@@ -43,7 +43,7 @@ We'll start with an unused Raspberry Pi and empty microSD card (or we'll reforma
 4.  Once writing is complete complete, remove the microSD card, and place it into the Raspberry Pi.
 5.  (Optional) If not already done so, attach your Pioreactor HAT to your Raspberry Pi. Ensure the two pieces fit snugly together.
 6.  Plug the power cord into your Raspberry Pi in. LEDs onboard the Raspberry Pi should start to light up.
-7.  After a few moments, your Pioreactor will flash a blue LED and now is ready to go. Navigate to [http://pioreactor.local](http://pioreactor.local) in a web browser to visit the web interface. (Not working? See [Troubleshooting](/user_guide/Raspberry%20Pi%20set%20up%20and%20software%20installation#troubleshooting) below).
+7.  After a few moments, your Pioreactor will flash a blue LED and now is ready to go. Navigate to [http://pioreactor.local](http://pioreactor.local) in a web browser to visit the web interface. (Not working? See [Troubleshooting](/user_guide/Getting%20started/Raspberry%20Pi%20set%20up%20and%20software%20installation#troubleshooting) below).
 
 
 
