--- a/user-guide/01-getting-started/02-software-set-up.mdx
+++ b/user-guide/01-getting-started/02-software-set-up.mdx
@@ -1,7 +1,7 @@
 ---
 description: Install the Pioreactor software onto the Raspberry Pi
 title: Raspberry Pi set up and software installation
-slug: /getting-started/software-set-up
+slug: /software-set-up
 ---
 
 import TOCInline from '@theme/TOCInline';
@@ -16,7 +16,7 @@ You can expect the setup process to take 10-15 minutes.
 
 Before you get started, you'll need to have the following:
 
-1.  A Raspberry Pi (our list of preferred Raspberry Pis is [here](/user-guide/Common%20questions#what-raspberry-pi-hardware-can-i-use-i-see-raspberry-pi-1-2-3-4-a-b--zero---its-confusing))
+1.  A Raspberry Pi (our list of preferred Raspberry Pis is [here](/user-guide/common-questions#what-raspberry-pi-hardware-can-i-use-i-see-raspberry-pi-1-2-3-4-a-b--zero---its-confusing))
 2.  A blank microSD card, ideally 16GB size or larger.
 3.  A suitable power cord for the Raspberry Pi. (If you look at the power rating, it should be about 5V and at least 2A).
 4.  A computer with internet access and ability to read & write to a microSD card.
@@ -75,7 +75,7 @@ On the leader's command line, the command `pio add-pioreactor <new name>` will c
 ## Troubleshooting
 
 #### My Pioreactor keeps flashing the blue LED
-On a successful start, the Pioreactor will flash its blue LED for about 4 seconds. If you observe the blue LED flashing for longer, something may be wrong. You can diagnose the problem by [counting the number of flashes observed](/user-guide/Advanced/Flashing%20blue%20led)
+On a successful start, the Pioreactor will flash its blue LED for about 4 seconds. If you observe the blue LED flashing for longer, something may be wrong. You can diagnose the problem by [counting the number of flashes observed](/user-guide/error-codes)
 
 
 
