--- a/user-guide/01-getting-started/02-software-set-up.mdx
+++ b/user-guide/01-getting-started/02-software-set-up.mdx
@@ -40,7 +40,7 @@ We'll start with an unused Raspberry Pi and empty microSD card (or we'll reforma
 
     1. Set hostname as the desired name of this Pioreactor. Some names that we use for our first Pioreactor: `pioreactor1`, or `leader`, or `p1`.
     2. Check "Enable SSH".
-    3. (Optional) Add a password, default is `raspberry` if not provided.
+    3. Add username: `pioreactor` and password: `raspberry` (you can change the password later)
     3. Check "Configure wifi" and enter your network name into SSID, wifi password, and country.
     4. (Optional) Change timezone to your local timezone.
     5. Click "Save"
