rename dev files

--- a/user-guide/03-Extending your Pioreactor/06-using-community-plugins.mdx
+++ b/user-guide/03-Extending your Pioreactor/06-using-community-plugins.mdx
@@ -6,7 +6,7 @@ import TOCInline from '@theme/TOCInline';
 
 # Using community plugins
 
-The Pioreactor comes with a large set of functionality and behaviour to accomplish most projects. For example, continuous culturing, optical density reading, and stable temperatures are available out-of-the-box. However, the specifics and range of how people use bioreactors goes far beyond what we could ever cover. That's why Pioreactor has added a platform so that community members can make their own extensions and share them with others. We call these _plugins._ (Below is how to install plugins - if you are looking to create your own plugins, see [here](/developer-guide/Plugins/Turning%20your%20automation%20into%20a%20plugin).)
+The Pioreactor comes with a large set of functionality and behaviour to accomplish most projects. For example, continuous culturing, optical density reading, and stable temperatures are available out-of-the-box. However, the specifics and range of how people use bioreactors goes far beyond what we could ever cover. That's why Pioreactor has added a platform so that community members can make their own extensions and share them with others. We call these _plugins._ (Below is how to install plugins - if you are looking to create your own plugins, see [here](/developer-guide/plugin-as-python-package).)
 
 <TOCInline toc={toc} />
 
